name:                dict-cc
version:             0.1.0
synopsis:            A command line dict.cc client
homepage:            https://github.com/matt-snider/dict.cc#readme
license:             MIT
license-file:        LICENSE
author:              Matt Snider
maintainer:          matt.snider@alum.utoronto.ca
copyright:           2017 Matt Snider
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable dict-cc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring == 0.10.8.1
                     , directory == 1.3.1.1
                     , HTTP >= 4000
                     , regex-posix == 0.95.2
                     , tagsoup == 0.14
                     , text == 1.2.2.1
                     , text-format == 0.3.1.1
                     , yaml == 0.8.20
  default-language:    Haskell2010

test-suite dict-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-snider/dict.cc
